# zkack-demo-phase0

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  demo.sh
.github/workflows/: ci.yml  release.yml
crates/zkack-circuits/: Cargo.toml
crates/zkack-circuits/src/: lib.rs
crates/zkack-signer/: Cargo.toml
crates/zkack-signer/src/: main.rs
crates/zkack-spec/: Cargo.toml
crates/zkack-spec/src/: lib.rs
crates/zkack-verifier/: Cargo.toml
crates/zkack-verifier/src/: main.rs
crates/zkack-watcher/: Cargo.toml
crates/zkack-watcher/src/: main.rs
docs/: ARCHITECTURE.md  DEMO.md  INTEGRATIONS.md  ONE_PAGER.md  OPERATIONS.md  PROTOCOL.md  THREAT_MODEL.md
samples/: sample.eml
