[package]
license-file = "LICENSE"
name = "zkack-signer"
version = "0.1.0"
edition = "2021"
description = "CLI to inject X-ZK-DAT into an RFC5322 message."

[dependencies]
zkack-spec = { path = "../zkack-spec" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

regex = "1.10"
