[package]
license-file = "LICENSE"
name = "zkack-spec"
version = "0.1.0"
edition = "2021"
description = "Shared types and helpers for ZK-ACK (DAT sign/verify, types, hashing)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
